--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -66,7 +66,7 @@
     <div class="container mt-3" style="margin-left: 0px; padding-right: 50%;">
         <div class="menuboxborder">
             <div class="menuitem">
-                <a href="/novoPedido">Novo Pedido</a>
+                <a href="/pedido/novoPedido">Novo Pedido</a>
                 <br>
                 <a href="/visualizarPedidos">Visualizar Pedidos</a>
                 <br>
