logica de pedido finalizada

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -68,7 +68,7 @@
             <div class="menuitem">
                 <a href="/pedido/novoPedido">Novo Pedido</a>
                 <br>
-                <a href="/visualizarPedidos">Visualizar Pedidos</a>
+                <a href="/pedido/visualizarpedidos">Visualizar Pedidos</a>
                 <br>
                 <a href="/produtos">Produtos</a>
                 <br>
