--- a/src/main/resources/templates/produtos-servicos-menu.html
+++ b/src/main/resources/templates/produtos-servicos-menu.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Estoque</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-utilities.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-reboot.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-grid.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap-utilities.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Aldrich'>
 </head>
 
@@ -66,11 +66,11 @@
     <div class="container mt-3" style="margin-left: 0px; padding-right: 50%;">
         <div class="menuboxborder">
             <div class="menuitem">
-                <a href="/cadastrarproduto" style="text-decoration: none;">Cadastrar Produto/Serviço</a>
+                <a href="/produto/cadastrarproduto" style="text-decoration: none;">Cadastrar Produto/Serviço</a>
                 <br>
-                <a href="/listarprodutos" style="text-decoration: none;">Listar Produtos</a>
+                <a href="/produto/listarprodutos" style="text-decoration: none;">Listar Produtos</a>
                 <br>
-                <a href="/listarservicos" style="text-decoration: none;">Listar Serviços</a>
+                <a href="/servico/listarservicos" style="text-decoration: none;">Listar Serviços</a>
                 <br>
             </div>
         </div>
